syntax = "proto3";

package data;

import "data/palette_viewer.proto";

// // // //


enum PaletteVillageReliefType {
  PALETTE_VILLAGE_RELIEF_UNSPECIFIED = 0;
  hachures = 1;
  contours = 2;
  grass = 3;
}

enum PaletteVillageOutlineType {
  PALETTE_VILLAGE_OUTLINE_UNSPECIFIED = 0;
  hard = 1;
  soft = 2;
  none = 3;
}

enum PaletteVillageRoofType {
  PALETTE_VILLAGE_ROOF_UNSPECIFIED = 0;
  gable = 1;
  hip = 2;
  flat = 3;
  ruin = 4;
}

enum PaletteVillageTreeShapeType {
  PALETTE_VILLAGE_TREE_SHAPE_UNSPECIFIED = 0;
  cotton = 1;
  conifer = 2;
  palm = 3;
}


message PaletteVillageTerrainObj {
  repeated PaletteRgbObj ground = 1;
  PaletteVillageReliefType relief = 2;
  PaletteRgbObj sand = 3;
  PaletteRgbObj plank = 4;
}

message PaletteVillageHousesObj {
  repeated PaletteRgbObj roofLight = 1;
  PaletteRgbObj roofStroke = 2;
  uint32 roofVarianceX10 = 3;
  uint32 roofSlopeX10 = 4;
  PaletteVillageRoofType roofType = 5;
}

message PaletteVillageRoadsObj {
  PaletteRgbObj road = 1;
  uint32 largeRoadX10 = 2;
  uint32 smallRoadX10 = 3;
  PaletteVillageOutlineType outlineRoads = 4;
  bool mergeRoads = 5;
}

message PaletteVillageFieldsObj {
  repeated PaletteRgbObj fieldLight = 1;
  PaletteRgbObj fieldFurrow = 2;
  uint32 fieldVarianceX10 = 3;
  PaletteVillageOutlineType outlineFields = 4;
}

message PaletteVillageWaterObj {
  PaletteRgbObj waterShallow = 1;
  PaletteRgbObj waterDeep = 2;
  PaletteRgbObj waterTide = 3;
  uint32 shallowBands = 4;
}

message PaletteVillageTreesObj {
  repeated PaletteRgbObj tree = 1;
  PaletteRgbObj thicket = 2;
  PaletteRgbObj treeDetails = 3;
  uint32 treeVarianceX10 = 4;
  PaletteVillageTreeShapeType treeShape = 5;
}

message PaletteVillageLightingObj {
  PaletteRgbObj shadowColor = 1;
  uint32 shadowLengthX10 = 2;
  uint32 shadowAngleDeg = 3;
  PaletteRgbObj lights = 4;
}

message PaletteVillageTextObj {
  PaletteFontObj fontHeader = 1;
  PaletteFontObj fontPopulation = 2;
  PaletteFontObj fontNumber = 3;
}

message PaletteVillageMiscObj {
  PaletteRgbObj ink = 1;
  PaletteRgbObj paper = 2;
  uint32 strokeNormalX10 = 3;
  uint32 strokeThinX10 = 4;
}

message PaletteVillageObj {
  PaletteVillageTerrainObj terrain = 1;
  PaletteVillageHousesObj houses = 2;
  PaletteVillageRoadsObj roads = 3;
  PaletteVillageFieldsObj fields = 4;
  PaletteVillageWaterObj water = 5;
  PaletteVillageTreesObj trees = 6;
  PaletteVillageLightingObj lighting = 7;
  PaletteVillageTextObj text = 8;
  PaletteVillageMiscObj misc = 9;
}